Primer Punto completo

--- a/1214748203/Examen_2022_1_02_Resuelto (incompleto).ipynb
+++ b/1214748203/Examen_2022_1_02_Resuelto (incompleto).ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 27,
       "id": "98d2b606",
       "metadata": {},
       "outputs": [],
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 28,
       "id": "62cbc669-9ed6-4f54-b4c9-5ac10f7c15d6",
       "metadata": {
         "id": "62cbc669-9ed6-4f54-b4c9-5ac10f7c15d6"
@@ -58,7 +58,7 @@
               "7"
             ]
           },
-          "execution_count": 77,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -72,43 +72,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
-      "id": "f4845f56",
+      "execution_count": 29,
+      "id": "4db4c013",
       "metadata": {},
       "outputs": [],
       "source": [
-        "def integrar(x,n):\n",
-        "    return np.sin(x**n)"
+        "x = sp.symbols('x')\n",
+        "λ = Valn\n",
+        "inf = float(\"inf\")\n",
+        "test = lambda x: sp.sin(x**λ)\n",
+        "def I(f):\n",
+        "    return sp.integrate(test(x),(x,0,inf))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
-      "id": "fd4aa364",
+      "execution_count": 30,
+      "id": "c601220d",
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "El valor de la integral:  0.20815400412547055\n",
-            "El error:  7.912638358447254e-14\n"
+            "2**(1/7)*sqrt(pi)*gamma(4/7)/(14*gamma(13/14))\n"
           ]
         }
       ],
       "source": [
-        "LimiteInf = 0\n",
-        "# arreglar\n",
-        "LimiteSup = 1.09485958 # np.inf\n",
-        "###\n",
-        "resultado, error = sci.integrate.quad(integrar,LimiteInf,LimiteSup,args=(Valn,))\n",
-        "print(\"El valor de la integral: \", resultado)\n",
-        "print(\"El error: \", error)"
+        "print(I(test).subs(λ,7))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "id": "cab28606",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.20815444015266787"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "resultado = ( 2**(1/7)*sqrt(pi)*sci.special.gamma(4/7) ) / (14*sci.special.gamma(13/14))\n",
+        "resultado"
       ]
     },
     {
       "cell_type": "markdown",
-      "id": "1910535c",
+      "id": "56c21538",
       "metadata": {},
       "source": [
         "Valor obtenido en https://www.wolframalpha.com/ es: \n",
@@ -139,133 +158,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "id": "2df48495-196b-4fa4-8206-466cd33658e2",
       "metadata": {
         "id": "2df48495-196b-4fa4-8206-466cd33658e2"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>lista</th>\n",
-              "      <th>pares</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>[1, 1, 2, 3, -4, -4, -5, 6]</td>\n",
-              "      <td>{'S': 2, 'ψ': [[3, -5], [2, -4], [-4, 6], [1, ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>[1, 2, 2, 2, -3, -5, -6, 7]</td>\n",
-              "      <td>{'S': 4, 'ψ': [[2, 2], [-3, 7], [1, -5], [2, -...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>[1, -2, -2, 4, 5, -7, -7, 8]</td>\n",
-              "      <td>{'S': 9, 'ψ': [[4, 5], [1, 8], [-2, -7], [5, 4...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>[1, 2, 2, 4, -5, -5, -7, 8]</td>\n",
-              "      <td>{'S': 3, 'ψ': [[4, -7], [-5, 8], [2, -5], [1, ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>[2, -3, -4, 5, -6, 7, 7, -8]</td>\n",
-              "      <td>{'S': 1, 'ψ': [[-6, 7], [7, -8], [5, -6], [2, ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>240</th>\n",
-              "      <td>[2, -4, -5, 10, 11, -16, -17, 19]</td>\n",
-              "      <td>{'S': 21, 'ψ': [[-4, -17], [-5, -16], [10, 11]...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>241</th>\n",
-              "      <td>[5, -7, -7, 11, 13, -17, -17, 19]</td>\n",
-              "      <td>{'S': 24, 'ψ': [[5, 19], [-7, -17], [11, 13], ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>242</th>\n",
-              "      <td>[4, -5, -7, 8, -17, 18, 18, -19]</td>\n",
-              "      <td>{'S': 1, 'ψ': [[-7, 8], [4, -5], [-17, 18], [1...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>243</th>\n",
-              "      <td>[2, 2, 5, -7, 10, -14, -17, 19]</td>\n",
-              "      <td>{'S': 12, 'ψ': [[2, -14], [2, 10], [-7, 19], [...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>244</th>\n",
-              "      <td>[2, -3, -3, 6, 10, -13, -18, 19]</td>\n",
-              "      <td>{'S': 16, 'ψ': [[-3, -13], [6, 10], [2, -18], ...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>245 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                 lista  \\\n",
-              "0          [1, 1, 2, 3, -4, -4, -5, 6]   \n",
-              "1          [1, 2, 2, 2, -3, -5, -6, 7]   \n",
-              "2         [1, -2, -2, 4, 5, -7, -7, 8]   \n",
-              "3          [1, 2, 2, 4, -5, -5, -7, 8]   \n",
-              "4         [2, -3, -4, 5, -6, 7, 7, -8]   \n",
-              "..                                 ...   \n",
-              "240  [2, -4, -5, 10, 11, -16, -17, 19]   \n",
-              "241  [5, -7, -7, 11, 13, -17, -17, 19]   \n",
-              "242   [4, -5, -7, 8, -17, 18, 18, -19]   \n",
-              "243    [2, 2, 5, -7, 10, -14, -17, 19]   \n",
-              "244   [2, -3, -3, 6, 10, -13, -18, 19]   \n",
-              "\n",
-              "                                                 pares  \n",
-              "0    {'S': 2, 'ψ': [[3, -5], [2, -4], [-4, 6], [1, ...  \n",
-              "1    {'S': 4, 'ψ': [[2, 2], [-3, 7], [1, -5], [2, -...  \n",
-              "2    {'S': 9, 'ψ': [[4, 5], [1, 8], [-2, -7], [5, 4...  \n",
-              "3    {'S': 3, 'ψ': [[4, -7], [-5, 8], [2, -5], [1, ...  \n",
-              "4    {'S': 1, 'ψ': [[-6, 7], [7, -8], [5, -6], [2, ...  \n",
-              "..                                                 ...  \n",
-              "240  {'S': 21, 'ψ': [[-4, -17], [-5, -16], [10, 11]...  \n",
-              "241  {'S': 24, 'ψ': [[5, 19], [-7, -17], [11, 13], ...  \n",
-              "242  {'S': 1, 'ψ': [[-7, 8], [4, -5], [-17, 18], [1...  \n",
-              "243  {'S': 12, 'ψ': [[2, -14], [2, 10], [-7, 19], [...  \n",
-              "244  {'S': 16, 'ψ': [[-3, -13], [6, 10], [2, -18], ...  \n",
-              "\n",
-              "[245 rows x 2 columns]"
-            ]
-          },
-          "execution_count": 143,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "Pagina = \"https://raw.githubusercontent.com/ComputationalMethods/Evaluacion_2022-1/main/data/lista_pares.json\"\n",
         "Archivo = json.loads(requests.get(Pagina).text)\n",
@@ -275,19 +173,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": null,
       "id": "7ec49d64",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 2, 4, -5, -5, -7, 8]\n",
-            "{'S': 3, 'ψ': [[4, -7], [-5, 8], [2, -5], [1, 2], [-7, 4], [8, -5], [-5, 2], [2, 1]]}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "MisDatos = Df.iloc[3,:]\n",
         "Lista = MisDatos[\"lista\"]\n",
@@ -298,40 +187,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "id": "b78e16a4",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([[0., 1., 0., 0., 0., 0., 0., 0.],\n",
-              "       [1., 0., 0., 0., 1., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 1., 0.],\n",
-              "       [0., 1., 0., 0., 0., 0., 0., 1.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 1., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 1., 0., 0., 0.]])"
-            ]
-          },
-          "execution_count": 145,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Testeando como crear una matriz para la comparación\n",
         "\n",
         "Objetivo = np.zeros((8,8))\n",
         "for i in range(0,len(Objetivo[0,:])):\n",
-        "    Objetivo[abs(Pares['ψ'][i][0])-1,abs(Pares['ψ'][i][1])-1] = 1"
+        "    Objetivo[abs(Pares['ψ'][i][0])-1,abs(Pares['ψ'][i][1])-1] = 1\n",
+        "\n",
+        "Objetivo"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "a40da09c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "Test = np.array([Lista,Lista,Lista,Lista,Lista,Lista,Lista,Lista])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9196a4aa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "(Test+Test.transpose())/2\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8c91e97c",
       "metadata": {},
       "outputs": [],
       "source": []
