--- a/1000305547/Parcial_2.ipynb
+++ b/1000305547/Parcial_2.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -34,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "GtfOFsfmKumG"
       },
@@ -70,9 +71,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NN2Euad7LbUW",
-        "outputId": "54f82389-2a66-4a53-bc04-2da560c02541"
+        "outputId": "d614850a-ee4e-4f8b-c7de-ae54245a882b"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ljg3EberjEU1",
-        "outputId": "30b10b1e-e04a-458e-b5b7-3a927961ab08"
+        "outputId": "a5724341-2180-4807-b347-00da2d608681"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5x5cSgRYmWaM",
-        "outputId": "765ba5a7-c932-4568-dc4b-45442e0f4e22"
+        "outputId": "0609956e-160b-4b8c-848f-d99f88594a60"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +170,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 99
+          "execution_count": 4
         }
       ]
     },
@@ -178,22 +179,22 @@
       "source": [
         "# B.2 Calculo del determinante.\n",
         "det = np.linalg.det(matriz)\n",
-        "print(r'El determinante es: %.3f'%det)"
+        "print(r'El determinante es: %.f. Por tanto debe haber, como minimo, una fila de ceros.'%det)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmkLd3Dbovng",
-        "outputId": "d8234528-8fa3-483e-edb7-eb11496413f6"
+        "outputId": "63344e88-9101-4f38-bc77-e43af20b8438"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "El determinante es: 0.038\n"
+            "El determinante es: 0. Por tanto debe haber, como minimo, una fila de ceros.\n"
           ]
         }
       ]
@@ -210,44 +211,43 @@
         "autovector = autovector[:,indice]\n",
         "\n",
         "print('''Autovalores ordenados:\n",
-        "''', a_valor_abs)\n",
+        "''', np.round(np.diag(a_valor_abs),3))\n",
         "print('''\n",
         "Autovectores ordenados:\n",
-        "''', autovector)"
+        "''', np.around(autovector, 3))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c1TIpzUTo01y",
-        "outputId": "abbb793d-42a5-4e58-91db-df12f5021948"
+        "outputId": "81d35a01-0d5e-4d3d-efba-d2c5f41d344e"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Autovalores ordenados:\n",
-            " [0.35242020373412186, 0.3524202037341219, 0.6515782513117025, 0.6515782513117027, 0.8141560047067146, 0.8141560047067148, 1.0462154569769944, 1.0462154569769957]\n",
+            " [[0.352 0.    0.    0.    0.    0.    0.    0.   ]\n",
+            " [0.    0.352 0.    0.    0.    0.    0.    0.   ]\n",
+            " [0.    0.    0.652 0.    0.    0.    0.    0.   ]\n",
+            " [0.    0.    0.    0.652 0.    0.    0.    0.   ]\n",
+            " [0.    0.    0.    0.    0.814 0.    0.    0.   ]\n",
+            " [0.    0.    0.    0.    0.    0.814 0.    0.   ]\n",
+            " [0.    0.    0.    0.    0.    0.    1.046 0.   ]\n",
+            " [0.    0.    0.    0.    0.    0.    0.    1.046]]\n",
             "\n",
             "Autovectores ordenados:\n",
-            " [[ 0.76982939 -0.76982939  0.          0.          0.          0.\n",
-            "   0.          0.        ]\n",
-            " [ 0.63824972  0.63824972  0.          0.          0.          0.\n",
-            "   0.          0.        ]\n",
-            " [ 0.          0.          0.86226123 -0.86226123  0.          0.\n",
-            "   0.          0.        ]\n",
-            " [ 0.          0.          0.5064638   0.5064638   0.          0.\n",
-            "   0.          0.        ]\n",
-            " [ 0.          0.          0.          0.          0.62776833 -0.27311784\n",
-            "  -0.62776833 -0.27311784]\n",
-            " [ 0.          0.          0.          0.         -0.63685574  0.30601181\n",
-            "  -0.63685574 -0.30601181]\n",
-            " [ 0.          0.          0.          0.         -0.30400858 -0.69311956\n",
-            "  -0.30400858  0.69311956]\n",
-            " [ 0.          0.          0.          0.          0.32848208  0.59274674\n",
-            "  -0.32848208  0.59274674]]\n"
+            " [[ 0.77  -0.77   0.     0.     0.     0.     0.     0.   ]\n",
+            " [ 0.638  0.638  0.     0.     0.     0.     0.     0.   ]\n",
+            " [ 0.     0.     0.862 -0.862  0.     0.     0.     0.   ]\n",
+            " [ 0.     0.     0.506  0.506  0.     0.     0.     0.   ]\n",
+            " [ 0.     0.     0.     0.     0.628 -0.273 -0.628 -0.273]\n",
+            " [ 0.     0.     0.     0.    -0.637  0.306 -0.637 -0.306]\n",
+            " [ 0.     0.     0.     0.    -0.304 -0.693 -0.304  0.693]\n",
+            " [ 0.     0.     0.     0.     0.328  0.593 -0.328  0.593]]\n"
           ]
         }
       ]
@@ -256,25 +256,35 @@
       "cell_type": "code",
       "source": [
         "# B.4\n",
-        "print('Autovalores sin valor absoluto: ', autovalor)\n",
-        "print('Autovalores con valor absoluto: ', a_valor_abs)"
+        "print('''Autovalores con valor absoluto: \n",
+        "''', np.round(np.diag(a_valor_abs),3))\n",
+        "print('''\n",
+        "De la anterior matriz, podemos deducir que existen 4 autovalores degenerados, pues hay 4 autovalores que se repiten en la matriz''')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mF_Q5ZyXo7ku",
-        "outputId": "c0f00ea1-e7d4-46a5-b769-908efe87ef1e"
+        "outputId": "77906179-5fdf-4f1a-aec3-c62a17d6b3d2"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Autovalores sin valor absoluto:  [ 0.814156   -0.814156    0.3524202  -0.3524202  -1.04621546 -0.65157825\n",
-            "  1.04621546  0.65157825]\n",
-            "Autovalores con valor absoluto:  [0.35242020373412186, 0.3524202037341219, 0.6515782513117025, 0.6515782513117027, 0.8141560047067146, 0.8141560047067148, 1.0462154569769944, 1.0462154569769957]\n"
+            "Autovalores con valor absoluto: \n",
+            " [[0.352 0.    0.    0.    0.    0.    0.    0.   ]\n",
+            " [0.    0.352 0.    0.    0.    0.    0.    0.   ]\n",
+            " [0.    0.    0.652 0.    0.    0.    0.    0.   ]\n",
+            " [0.    0.    0.    0.652 0.    0.    0.    0.   ]\n",
+            " [0.    0.    0.    0.    0.814 0.    0.    0.   ]\n",
+            " [0.    0.    0.    0.    0.    0.814 0.    0.   ]\n",
+            " [0.    0.    0.    0.    0.    0.    1.046 0.   ]\n",
+            " [0.    0.    0.    0.    0.    0.    0.    1.046]]\n",
+            "\n",
+            "De la anterior matriz, podemos deducir que existen 4 autovalores degenerados, pues hay 4 autovalores que se repiten en la matriz\n"
           ]
         }
       ]
